--- a/javascripts/discourse/templates/components/story-image.hbs
+++ b/javascripts/discourse/templates/components/story-image.hbs
@@ -4,4 +4,7 @@
     <div class="story-image" style="background-image: url('{{imageURL}}')"></div>
   </div>
   {{/if}}
+  <div id="paginatediv" class="paginationstyle">
+<a href="#" rel="previous" style="margin-right: 100px">Prev Episode</a> <a href="#" rel="next">Next Episode</a>
+</div>
 {{/if}}
