Added Next Prev Button

--- a/javascripts/discourse/templates/components/story-image.hbs
+++ b/javascripts/discourse/templates/components/story-image.hbs
@@ -5,3 +5,6 @@
   </div>
   {{/if}}
 {{/if}}
+<div id="paginatediv" class="paginationstyle">
+<a href="#" rel="previous" style="margin-right: 100px">Prev</a> <a href="#" rel="next">Next</a>
+</div>
